--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/addItem/addItem",
-    "pages/editItem/editItem"
+    "pages/editItem/editItem",
+    "pages/expired/expired"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
